--- a/public/index.html
+++ b/public/index.html
@@ -8,22 +8,9 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Abdullah | Portfolio</title>
+  <title>Saad Ahmed | Portfolio</title>
   <meta name="description" content="Self Developed personal website build with React.js">
 
-  <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Abdullah | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
-
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://abd-developer.web.app/">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Abdullah | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Abdullah | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
 
   <!-- adsence -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6585902045163127"
